S5/E: wire real soak workload (perf/soak.sh) + 5.5-min SMOKE (clean)
Wires the YELLOW soak-72h.sh stub's promised real workload as a standalone
perf/soak.sh (soak-72h.sh duration contract untouched): real 3-node ZGC
cluster (smoke-multinode launch shape), driven ~100 commits/s via Workstream B
OpenLoopWriteDriver (box-sustainable; 10k SLO is M-9 ENV-BLOCKED). Trend line
every --sample sec: RSS (+per-node), jstat heap-used (ZGC-column-keyed), open
FD count, thread count, cumulative GC (cycles + cumsec from -Xlog:gc), sampled
commit p50/p99. Leak verdict excludes a warmup floor (>=180s), compares
post-warmup 1st/2nd-half medians, treats jstat heap-used as the definitive
heap-leak signal (RSS-up-with-flat-heap = native/throttle, not a leak), and is
OBSERVATIONAL on short smokes (<4 post-warmup samples). Labels <=600s as SMOKE.

SMOKE (334s, 10 samples): FD flat 69, threads flat 93, jstat heap-used flat
(~220-290MB), RSS plateaus ~1.25GB post-warmup -> NO leak in the smoke window.
A 5.5-min smoke is NOT a soak; the 24h run is the LEAD's to launch. Long-run
command documented in workstream-e-jit-soak.md §Soak.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>